<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/home" />

        <item
            android:id="@+id/internalFragment"
            android:title="@string/internal"
            android:icon="@drawable/folder" />

        <item
            android:id="@+id/cardFragment"
            android:title="@string/sd_card"
            android:icon="@drawable/card" />
    </group>

    <item android:title="@string/more" >
        <menu >
            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_about" />
        </menu>
    </item>
</menu>